ctrl/out.txt
### seq=9  2026-05-24T16:15:50Z
### host=autodl-container-8d624e9d85-11fd1ce7  python=Python 3.10.8
----- BEGIN -----
## install nodejs


                                                     [A[A[A[A[A[A[A[A
Preparing transaction: ...working... done
Verifying transaction: ...working... done
Executing transaction: ...working... done
## node/npm versions
v6.13.1
3.10.10
## npm global prefix
/root/miniconda3
## install Claude Code + Codex globally
npm ERR! Tell the author that this fails on your system:
npm ERR!     node install.cjs
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs @anthropic-ai/claude-code
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls @anthropic-ai/claude-code
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/hello-world/npm-debug.log
## verify
claude missing
/root/miniconda3/bin/codex
/root/miniconda3/lib/node_modules/@openai/codex/bin/codex.js:4
import { spawn } from "node:child_process";
^^^^^^

SyntaxError: Unexpected token import
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:549:28)
    at Object.Module._extensions..js (module.js:586:10)
    at Module.load (module.js:494:32)
    at tryModuleLoad (module.js:453:12)
    at Function.Module._load (module.js:445:3)
    at Module.runMain (module.js:611:10)
    at run (bootstrap_node.js:387:7)
    at startup (bootstrap_node.js:153:9)
codex missing
----- END (rc=0) -----
